tests/ui/link-native-libs/link-attr-validation-early.stderr
error[E0539]: malformed `link` attribute input
  --> $DIR/link-attr-validation-early.rs:2:1
   |
LL | #[link]
   | ^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[link(name = "...", /*opt*/ kind = "dylib|static|...", /*opt*/ wasm_import_module = "...", /*opt*/ import_name_type = "decorated|noprefix|undecorated")]`

error[E0539]: malformed `link` attribute input
  --> $DIR/link-attr-validation-early.rs:3:1
   |
LL | #[link = "foo"]
   | ^^^^^^^^^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[link(name = "...", /*opt*/ kind = "dylib|static|...", /*opt*/ wasm_import_module = "...", /*opt*/ import_name_type = "decorated|noprefix|undecorated")]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
