tests/ui/link-native-libs/link-attr-validation-early.rs
// Top-level ill-formed
#[link] //~ ERROR malformed
#[link = "foo"] //~ ERROR malformed
extern "C" {}

fn main() {}
